get images, data.json and configure tailwind v4

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,44 @@
 @import "tailwindcss";
 
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+/* Egyedi színek beállítása CSS változókkal */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: hsl(180, 29%, 50%);
+  --color-light-bg: hsl(180, 52%, 96%);
+  --color-light-filter: hsl(180, 31%, 95%);
+  --color-dark-cyan: hsl(180, 8%, 52%);
+  --color-very-dark-cyan: hsl(180, 14%, 20%);
+  --color-test: hsl(136, 76%, 48%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+/* Tailwindben való használathoz */
+.bg-primary {
+  background-color: var(--color-primary);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.bg-test {
+    background-color: var(--color-test);
   }
+
+.text-primary {
+  color: var(--color-primary);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.bg-light-bg {
+  background-color: var(--color-light-bg);
+}
+
+.bg-light-filter {
+  background-color: var(--color-light-filter);
+}
+
+.text-dark-cyan {
+  color: var(--color-dark-cyan);
+}
+
+.text-very-dark-cyan {
+  color: var(--color-very-dark-cyan);
 }
